--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,24 @@ body {
 .textBox {
     height: 10%;
 }
+
+img {
+    width: 3.2rem;
+    border-radius: 50%;
+    margin-right: 0.5rem;
+    
+}
+
+.notificationIcon {
+    width: 3.2rem;
+    height: 3.2rem;
+    border-radius: 50%;
+    margin-right: 0.5rem;
+    align-self: center;
+    text-align: center;
+    font-size: 1.4rem;
+    color: lightblue;
+    background-color: white;
+    padding: 0.9rem 0 0 0;
+
+}
